# tinystories-burn-charlm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md  clippy.toml  deny.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  quality.yml  semver.yml
crates/data/: Cargo.toml
crates/data/src/: dataset.rs  download.rs  lib.rs  main.rs  tokenizer.rs
crates/infer/: Cargo.toml
crates/model-core/: Cargo.toml
crates/model-core/src/: config.rs  lib.rs  model.rs  types.rs
crates/train/: Cargo.toml
scripts/: setup.sh
