[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SHA888/tinystories-burn-charlm"
rust-version = "1.89"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
burn = { version = "0.20.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
parquet = "58.1.0"
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
