[package]
name = "data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
model-core = { path = "../model-core" }
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

[lints]
workspace = true
